<resources>
    <string name="app_name">El-Hamd</string>
    <string name="el_hamd_super_market">El-Hamd Super Market</string>
    <string name="add_item">Add Item</string>
    <string name="item_name">Item Name</string>
    <string name="item_sell_price">Item Sell Price</string>
    <string name="item_buy_price">Item Buy Price</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="all_fields_required">All Fields Are Required !!</string>
    <string name="item_deleted">This item Deleted !!</string>
    <string name="restore">Restore</string>
    <string name="name">Name:</string>
    <string name="quantity">Quantity:</string>
    <string name="sell_price">Sell Price:</string>
    <string name="buy_price">Buy Price:</string>
    <string name="egp">EGP</string>
    <string name="update_item">Update Item</string>
</resources>